Fix for bug 367239 Reviewed by Blaise Doughan